@@ -1,9 +1,13 @@
 virtualbox (4.2.16-dfsg-1) UNRELEASED; urgency=low
 
+  [ Felix Geyer ]
   * New upstream release.
     - Fixes CVE-2013-3792: virtio-net host DoS (Closes: #715327)
   * Drop 36-python-multiarch.patch and 37-wheezy-kernel-drm.patch,
     fixed upstream.
+
+  [ Gianfranco Costamagna ]
+  * Patch refresh.
 
  -- Felix Geyer <fgeyer@debian.org>  Sun, 14 Jul 2013 17:52:45 +0200
 
